--- a/hologram-details.html
+++ b/hologram-details.html
@@ -102,11 +102,15 @@
             <div class="portfolio-description">
               <h2>Alien  Spaceship  Puzzle</h2>
               <div style="height:250px; overflow:auto;">
-                <p>
-                  The holograms shown here are amazing aren't they! I love them and I worked so incredibly hard on them but it was worth it dawg. I am a creative idividual with a passion for learning. The term "forever student" definitely applies to me. I am also a tinkerer. As a child, my hobbies included taking electronics
-                  apart to repurpose them into a new gadget like an automatic light switch or a soda dispencer. One of my favorite hobbies was turning my entire room into one big elaborate Rube Goldberg
-                  machine! Nowadays I find myself doing much of the same, only this time in a laboratory! Throughout my career (both academic and professional) I've had plenty of opportunities to 
-                  design, build, and program some new devices that improves our science! My hope is to continue to do more of the same in the future but I plan to go wherever my creativity takes me!
+                <p class="indent">
+                  This is the grand finale puzzle I designed for the Area 51 themed escape room at Clue Quest (Edmond, OK). Players must collect enough fuel orbs throughout the room to power up
+                  the ship and open the door. Once the players have collected enough fuel orbs, the ship will power up enough to turn on the console and activate the holograms. There
+                  are six holograms (3 front and 3 back) that prompt the user for commands.
+                </p>
+                <p class="indent">
+                  Five ultrasonic sensors on the console are used to select the correct symbols and progress the game. The player waves their hand over the sensor at a certain height to select
+                  a certain symbol (the aliens control their technology through telekenesis). Once solved, a platform raises to reveal the final fuel orb. Players get to experience a final system 
+                  overload before the door slowly opens and they can make their escape!
                 </p>
               </div>
             </div>
