--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+
+  <script src="https://www.google.com/recaptcha/enterprise.js?render=6LfmvRgiAAAAAHDP4tm9WtzewCMeSLM-n1xFY4Pd"></script>
+  <script>
+  grecaptcha.enterprise.ready(function() {
+      grecaptcha.enterprise.execute('6LfmvRgiAAAAAHDP4tm9WtzewCMeSLM-n1xFY4Pd', {action: 'login'}).then(function(token) {
+        href="mailto: jrdnbrtchr1@gmail.com"
+      });
+  });
+  </script>
+  
 </head>
 
 <body>
@@ -122,10 +132,14 @@
 
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <p class="indent">
-              I am a creative idividual with a passion for learning. The term "forever student" definitely applies to me. I am also a tinkerer. As a child, my hobbies included taking electronics
-              apart to repurpose them into a new gadget like an automatic light switch or a soda dispencer. One of my favorite hobbies was turning my entire room into one big elaborate Rube Goldberg
-              machine! Nowadays I find myself doing much of the same, only this time in a laboratory! Throughout my career (both academic and professional) I've had plenty of opportunities to 
-              design, build, and program some new devices that improves our science! My hope is to continue to do more of the same in the future but I plan to go wherever my creativity takes me!
+              I am a creative idividual with a passion for learning. The term "forever student" definitely applies to me. I am also a tinkerer. As a child, my hobbies included taking 
+              electronics apart to repurpose them into a new gadget like an automatic light switch or a soda dispencer. One of my favorite hobbies was turning my entire room into one big 
+              elaborate Rube Goldberg machine!
+           </p>
+           <p class="indent">
+              Nowadays, I find myself doing much of the same, only this time in a laboratory! Throughout my career (both academic and professional), I've 
+              had plenty of opportunities to design, build, and program some new devices that improves our science! My hope is to continue to do more of the same in the future but I plan to 
+              go wherever my creativity takes me!
            </p>
           </div>
         </div>
@@ -253,7 +267,8 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Welcome to the resume section of my website! Below you can read about my skills and professional experience. If you'd like to download a copy of my resume, you can do so by clicking <a href="assets/Jordan Clay Bratcher Resume_2022.pdf" download="Jordan Clay Bratcher's Resume">here.</a></p>
+          <p>Welcome to the resume section of my website! Below you can read about my skills and professional experience. If you'd like to download a copy of my resume, you can do so by 
+            clicking <a href="assets/Jordan Clay Bratcher Resume_2022.pdf" download="Jordan Clay Bratcher's Resume">here.</a></p>
         </div>
 
         <div class="row">
@@ -265,8 +280,6 @@
               </em></p>
               <ul>
                 <li>Oklahoma City, Ok 73107</li>
-                <li>(270) 256-7586</li>
-                <li>jrdnbrtchr1@gmail.com</li>
               </ul>
             </div>
 
@@ -872,13 +885,13 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>jrdnbrtchr1@gmail.com</p>
+                <p><a href="" grecaptcha.execute>Email me here</a></p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 (270) 256-7586</p>
+                <p>Add picture of number</p>
               </div>
 
             </div>
