--- a/mixtape-details.html
+++ b/mixtape-details.html
@@ -53,12 +53,16 @@
                   <img src="assets/img/portfolio/Factory Obscura Photo.jpg" class="img-fluid" alt="">
                 </div>
 
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/Mixtape Photo.jpg" class="img-fluid" alt="">
+                <div class="swiper-slide"> 
+                  <img src="assets/img/portfolio/Tunnel Of Love.jpg" class="img-fluid" alt="">
                 </div>
 
                 <div class="swiper-slide"> 
-                  <img src="assets/img/portfolio/Tunnel Of Love.jpg" class="img-fluid" alt="">
+                  <img src="assets/img/portfolio/Tunnel of Love 2.jpg" class="img-fluid" alt="">
+                </div>
+                
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/Mixtape Photo.jpg" class="img-fluid" alt="">
                 </div>
 
               </div>
@@ -70,7 +74,7 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Art</li>
+                <li><strong>Category</strong>: Electronics</li>
                 <li><strong>Client</strong>: Factory Obscura</li>
                 <li><strong>Project date</strong>: 2019</li>
                 <li><strong>Project URL</strong>: <a href="https://www.factoryobscura.com/">Factory Obscura</a></li>
@@ -78,9 +82,17 @@
             </div>
             <div class="portfolio-description">
               <h2>Mixtape</h2>
-              <p>
-                I helped make stuff for Mixtape.
+              <div style="height:250px; overflow:auto;">
+              <p class="indent">
+                Mixtape is a fully immerisive, interactive art experience in Oklahoma City, OK. Before opening in 2019, I volunteered at Factory Obscura to help with lighting and construction. 
+                During my time as a volunteer, I did a little of everything! From helping demolish and renovate the interior, to working with the carpenter to frame the exhibit, to soldering 
+                electronics, I did it all! 
               </p>
+              <p class="indent">
+                My largest contribution was the wiring for the lights in the exhibit. Mixtape is filled with thousands of neopixel lights throughout each art installation! Additionally, I helped Factory Obscura with an interactive
+                piece that was in collaboration with <a href="http://www.meowwolf.com">Meow Wolf!</a>
+              </p>  
+              </div>
             </div>
           </div>
 
