--- a/synth-details.html
+++ b/synth-details.html
@@ -89,9 +89,13 @@
             </div>
             <div class="portfolio-description">
               <h2>Modular Synthesizer</h2>
-              <p>
-                I helped make this box.
-              </p>
+              <div style="height: 250px; overflow: auto;">
+                <p class="indent">
+                  This is a modular synthesizer case that I laser cut from cherrywood and engraved. I designed each engraving to display some element of a cyber-punk theme. Additionally, I 
+                  cut and engraved several UV sensitive acrylic panels to cover any empty slots once a module is removed. Each size panel is etched with it's own animal!
+                </p>
+
+              </div>
             </div>
           </div>
 
