--- a/bookmarks-details.html
+++ b/bookmarks-details.html
@@ -67,15 +67,18 @@
               <h3>Bookmarks</h3>
               <ul>
                 <li><strong>Category</strong>: Laser Cutting</li>
-                <li><strong>Client</strong>: Shannon Miller</li>
+                <li><strong>Client</strong>: Friends & Family</li>
                 <li><strong>Project date</strong>: 2020</li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Bookmarks</h2>
-              <p>
-                LabVIEW Program that does stuff.
-              </p>
+              <div style="height:250px; overflow:auto;">
+                <p class="indent">
+                  These are laser etched pieces of veneer that make excellent bookmarks! As gifts for friends and family, I like to take photos of their pets, deconstruct them into layered
+                  images of 3 colors, and etch each layer one at a time using the Glowforge. The result is a beautiful bookmark that your loved ones will cherish!
+                </p>
+              </div>
             </div>
           </div>
 
