--- a/index.html
+++ b/index.html
@@ -33,15 +33,6 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
-
-  <script src="https://www.google.com/recaptcha/enterprise.js?render=6LfmvRgiAAAAAHDP4tm9WtzewCMeSLM-n1xFY4Pd"></script>
-  <script>
-  grecaptcha.enterprise.ready(function() {
-      grecaptcha.enterprise.execute('6LfmvRgiAAAAAHDP4tm9WtzewCMeSLM-n1xFY4Pd', {action: 'login'}).then(function(token) {
-        href="mailto: jrdnbrtchr1@gmail.com"
-      });
-  });
-  </script>
   
 </head>
 
@@ -141,6 +132,10 @@
               had plenty of opportunities to design, build, and program some new devices that improves our science! My hope is to continue to do more of the same in the future but I plan to 
               go wherever my creativity takes me!
            </p>
+           <p class="indent">
+              My hobbies include outdoor activities such as camping, hiking, and swimming. In case you haven't noticed by now, I'm also an incredibly large nerd. There are very few horror 
+              or science fiction movies I haven't seen. I'm a decent artist and a pretty good cook.  Ask me why <i>Alien</i> is the greatest scifi-horror of all time.
+          </p>
           </div>
         </div>
 
@@ -795,11 +790,11 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                <h3>Saul Goodman</h3>
-                <h4>Ceo &amp; Founder</h4>
+                <h3>Paul Bowen</h3>
+                <h4>Research Scientist</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                  I think Jordan is the best!
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -808,11 +803,11 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                <h3>Sara Wilsson</h3>
-                <h4>Designer</h4>
+                <h3>Joey Durham</h3>
+                <h4>Mechanical Engineer</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                  Jordan is rad!
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -821,37 +816,11 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                <h3>Jena Karlis</h3>
-                <h4>Store Owner</h4>
+                <h3>Alexa Socianu</h3>
+                <h4>Geologist</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                <h3>Matt Brandon</h3>
-                <h4>Freelancer</h4>
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                <h3>John Larson</h3>
-                <h4>Entrepreneur</h4>
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
+                  Wow!
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -872,32 +841,46 @@
           <h2>Contact</h2>
         </div>
 
-        <div class="row mt-1">
+        <div class="row">
 
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-md-3">
             <div class="info">
-              <div class="address">
+              <div class="email">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>Oklahoma City, Ok, 73107</p>
+                <p>Oklahoma City, OK</p>
               </div>
+            </div>
+          </div>
+          
 
+          <div class="col-lg-4 col-md-3">
+            <div class="info">
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p><a href="" grecaptcha.execute>Email me here</a></p>
+                <p><a href="mailto: jrdnbrtchr1@gmail.com">My Email</a></p>
               </div>
+            </div>
+          </div>
 
+          <div class="col-lg-4 col-md-3">
+            <div class="info">
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>Add picture of number</p>
+                <p><a href="tel: 270-256-7586">My Phone Number</a></p>
               </div>
-
             </div>
-
           </div>
 
+          <div class="info">
+            <div class="reminder">
+              <p>You can also download my resume above for my contact information.</p>
+            </div>
+          </div>
+
+          <!--
           <div class="col-lg-8 mt-5 mt-lg-0">
 
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
@@ -924,6 +907,7 @@
             </form>
 
           </div>
+           -->
 
         </div>
 
