--- a/micp-details.html
+++ b/micp-details.html
@@ -73,9 +73,13 @@
             </div>
             <div class="portfolio-description">
               <h2>Python Data Workup</h2>
-              <p>
-                Python Program that does stuff.
-              </p>
+              <div style="height:250px; overflow:auto;">
+                <p class="indent">
+                  While working in a mercury injection lab, I created a Python program that helps workup and compile data from a large number of samples. The program takes data from
+                  Excel spreadsheets produced during the analysis, extracts the needed information into a dataframe and displays the data in several plots for the user. The user can then
+                  make selections on the plots for calculations which are saved into reports and then compiled into one master Excel spreadsheet.
+                </p>
+              </div>
             </div>
           </div>
 
