--- a/scalprogram-details.html
+++ b/scalprogram-details.html
@@ -73,9 +73,15 @@
             </div>
             <div class="portfolio-description">
               <h2>SCAL Program</h2>
-              <p>
-                LabVIEW Program that does stuff.
-              </p>
+              <div style="height:250px; overflow:auto;">
+                <p class="indent">
+                  SCAL stands for special core analysis lab which is the lab I worked in at Chesapeake Energy. This lab required equipment to be reconfigured regularly to achieve different 
+                  experimental designs for unique experiments. I designed the SCAL program to be versatile and robust. The program is capable of reading data from and controlling up to 4
+                  Teledyne ISCO pumps simulatenously. The program can also read data from up to 5 different transducers or flowmeters at a time. Aside from reading data in real-time, the 
+                  program is also capable of data logging, automated pump control based on real-time calculated values from other devices, or automated pump control based on specified time 
+                  intervals.
+                </p>
+              </div>
             </div>
           </div>
 
