--- a/stress dependent-details.html
+++ b/stress dependent-details.html
@@ -74,9 +74,18 @@
             </div>
             <div class="portfolio-description">
               <h2>Stress Dependent Program</h2>
-              <p>
-                I helped make this program.
-              </p>
+              <div style="height: 250px; overflow: auto;">
+                <p class="indent">
+                  The 3D stress dependent instrument is designed to apply pressure on a rock sample from 10 different directions in order to best simulate in-situ stress conditions. Once
+                  under stress, acoustic velocities are measured through each stress direction to determine the anisotropy of the rock. I designed this LabVIEW program to automatically acquire
+                  all 30 acoustic signals and provide tools to help with analysis. 
+                </p>
+                <p class="indent">
+                  The program sends commands to a Keithley switchbox to switch between each pair of piezeo-electric crystals, inducing 3 waveforms for each direction. The program then 
+                  retrieves the waveforms from a Keysight oscilloscope and displays the data for the user to analyze. Once arrival times have been selected by the user, the program generates 
+                  and saves an Excel spreadsheet with the compiled data.
+                </p>
+              </div>
             </div>
           </div>
 
