--- a/testtube-details.html
+++ b/testtube-details.html
@@ -97,9 +97,18 @@
             </div>
             <div class="portfolio-description">
               <h2>Biochemistry Puzzle</h2>
-              <p>
-                I helped make this box.
-              </p>
+              <div style="height: 250px; overflow: auto;">
+                <p class="indent">
+                  The second major puzzle encountered by players in the area 51 themed escape room at Clue Quest (Edmomd, OK) is a biochemistry puzzle. A xeno-biochemist has locked a fuel orb 
+                  for the nearby ufo behind a glass case. In order to retrieve the orb, players must learn about what the biochemist was working on. An alien autopsy has yielded several 
+                  organic samples that must be analyzed!
+                </p>
+                <p class="indent">
+                  This puzzle features 5 test tubes filled with a UV sensitive resin and an rfid tag. The test tubes are placed in the box and scanned. If in the tube is in the correct slot, 
+                  the box indicates with a green LED. When all 5 test tubes are in place, UV LEDs turn on, revealing the secret color of the resin inside. The players then decode this color
+                  sequence into numbers using a switch dial, and enter the passcode into a keypad.
+                </p>
+              </div>
             </div>
           </div>
 
