--- a/switchbox-details.html
+++ b/switchbox-details.html
@@ -81,9 +81,13 @@
             </div>
             <div class="portfolio-description">
               <h2>Binary Switch Box Puzzle</h2>
-              <p>
-                I helped make this box.
-              </p>
+              <diV>
+                <p class="indent">
+                  This is the first major puzzle you will encounter when solving the area 51 themed escape room at Clue Quest (Edmond, OK). A fuel orb for a spaceship hidden underground is locked
+                  behind a glass window and can only be retrieved if you know the proper switch combination. Players must learn about the scientist that built this box and his expertise in
+                  programming in order to gain access as the solution is in binary!
+                </p>
+              </diV>
             </div>
           </div>
 
