--- a/index.html
+++ b/index.html
@@ -848,7 +848,7 @@
               <div class="email">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>Oklahoma City, OK</p>
+                <p>Oklahoma City</p>
               </div>
             </div>
           </div>
