--- a/dicetower-details.html
+++ b/dicetower-details.html
@@ -67,7 +67,7 @@
               <h3>Project information</h3>
               <ul>
                 <li><strong>Category</strong>: 3D Printing</li>
-                <li><strong>Client</strong>: David Allen</li>
+                <li><strong>Client</strong>: N/A</li>
                 <li><strong>Project date</strong>: 2020</li>
               </ul>
             </div>
@@ -75,8 +75,9 @@
               <h2>Dice Tower</h2>
               <div style="height:250px; overflow:auto;">
                 <p class="indent">
-                  These are laser etched pieces of veneer that make excellent bookmarks! As gifts for friends and family, I like to take photos of their pets, deconstruct them into layered
-                  images of 3 colors, and etch each layer one at a time using the Glowforge. The result is a beautiful bookmark that your loved ones will cherish!
+                  <i>Dungeons & Dragons</i> is a fanstasy role playing game I occasionally play with friends that involves rolling dice. I wanted to come up with a fun way to carry my dice to 
+                  game nights so I designed this dice tower. The box has a small drawer capable of holding two sets of dice and the top removes and connects with a magnet to offer a tower to 
+                  roll your dice! This box was 3D printed with PLA filament on a FDM printer. You can download the models <a href="https://www.thingiverse.com/thing:3751554">here!</a>
                 </p>
               </div>
             </div>
