--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-3d_printing">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/Star Realms Box 3D Design.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/SS orrery glossary.PNG" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Orrery</h4>
                 <p>3D Printing</p>
@@ -666,7 +666,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-electronics filter-programming">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/Bookmarks SVG.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Halloween Mask Original.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Halloween Mask</h4>
                 <p>Electronics, Programming</p>
@@ -843,7 +843,7 @@
 
         <div class="row">
 
-          <div class="col-lg-4 col-md-3">
+          <div class="col-lg-4">
             <div class="info">
               <div class="email">
                 <i class="bi bi-geo-alt"></i>
@@ -854,7 +854,7 @@
           </div>
           
 
-          <div class="col-lg-4 col-md-3">
+          <div class="col-lg-4">
             <div class="info">
               <div class="email">
                 <i class="bi bi-envelope"></i>
@@ -864,7 +864,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-3">
+          <div class="col-lg-4">
             <div class="info">
               <div class="phone">
                 <i class="bi bi-phone"></i>
