--- a/mask-details.html
+++ b/mask-details.html
@@ -50,11 +50,11 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/Core Cleaner Code (small).JPG" class="img-fluid" alt="">
+                  <img src="assets/img/portfolio/Halloween Mask Original.jpeg" class="img-fluid" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/Core Cleaner Code (small).JPG" class="img-fluid" alt="">
+                  <img src="assets/img/portfolio/Halloween Mask Original.jpeg" class="img-fluid" alt="">
                 </div>
 
               </div>
@@ -75,8 +75,9 @@
               <h2>Halloween Mask</h2>
               <div style="height:250px; overflow:auto;">
                 <p class="indent">
-                  These are laser etched pieces of veneer that make excellent bookmarks! As gifts for friends and family, I like to take photos of their pets, deconstruct them into layered
-                  images of 3 colors, and etch each layer one at a time using the Glowforge. The result is a beautiful bookmark that your loved ones will cherish!
+                  This is one of my very first electronics projects I took on as an adult. The mask is a <i>Mad Max</i> themed voice changer I made for Halloween while in graduate school.
+                  The mask uses two arduinos, one to control the lights and one to control the voice changer. The voice changer uses a WAV shield to alter your voice based on a 
+                  potentiometer (high or low).
                 </p>
               </div>
             </div>
