--- a/orrery-details.html
+++ b/orrery-details.html
@@ -50,11 +50,11 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/Core Cleaner Code (small).JPG" class="img-fluid" alt="">
+                  <img src="assets/img/portfolio/SS orrery glossary.PNG" class="img-fluid" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/Core Cleaner Code (small).JPG" class="img-fluid" alt="">
+                  <img src="assets/img/portfolio/SS orrery glossary.PNG" class="img-fluid" alt="">
                 </div>
 
               </div>
@@ -75,8 +75,9 @@
               <h2>Orrery</h2>
               <div style="height:250px; overflow:auto;">
                 <p class="indent">
-                  These are laser etched pieces of veneer that make excellent bookmarks! As gifts for friends and family, I like to take photos of their pets, deconstruct them into layered
-                  images of 3 colors, and etch each layer one at a time using the Glowforge. The result is a beautiful bookmark that your loved ones will cherish!
+                  As a science fiction nerd, I love anything and everything about space. This orrery is a 3D printed, mechanized model of our solar system. The design was made by 
+                  <a href="https://www.instructables.com/Solar-System-Orrery-3D-Printed/">dragonator</a> and modified to incorporate two pulse wave modulators to dim the sun and slow 
+                  the speed of the orbit. The gear ratios are designed to closely resemble to actual orbits of each planet.
                 </p>
               </div>
             </div>
