--- a/starrealms-details.html
+++ b/starrealms-details.html
@@ -75,8 +75,9 @@
               <h2>Card Game Box</h2>
               <div style="height:250px; overflow:auto;">
                 <p class="indent">
-                  These are laser etched pieces of veneer that make excellent bookmarks! As gifts for friends and family, I like to take photos of their pets, deconstruct them into layered
-                  images of 3 colors, and etch each layer one at a time using the Glowforge. The result is a beautiful bookmark that your loved ones will cherish!
+                  Card games have become a large part of my social life. On weekends, I like to meet up with friends and play a wide variety of games and what better way to show off to 
+                  you friends than to make your own custom card carrying case! This box is 3D printed use PLA on an FDM printer. The lid is also held in place with magnets. 
+                  You can download the models <a href="https://www.thingiverse.com/thing:3751479">here!</a>
                 </p>
               </div>
             </div>
