--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Welcome to the portfolio section of my website! Here you'll find pictures of programs I've created, electronics I've built, and things I've done!</p>
+          <p>Welcome to the portfolio section of my website! Here you'll find pictures of programs I've created, electronics I've built, and things I've done! Click a project to see more details</p>
         </div>
 
         <div class="row">
